<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_module">About Us</string>
    <string name="account_auth_code">Verification code</string>
    <string name="account_auth_code_tips1">For security, we will send a verification code to your registered mobile phone or email.</string>
    <string name="account_auth_code_tips2">Has sent a verification code to %1$s</string>
    <string name="account_auth_error">Authorization error</string>
    <string name="account_bind_email">Bind Email</string>
    <string name="account_bind_phone">Bind Mobile Phone</string>
    <string name="account_create">No Account? To Create</string>
    <string name="account_delete">Delete account</string>
    <string name="account_delete_confirm">Please confirm the account you need to delete</string>
    <string name="account_delete_dialog_msg1">After deleting your account, all your data will be deleted. Are you sure you want to delete your account?</string>
    <string name="account_delete_dialog_msg2">The account is about to be cancelled. Are you sure you want to continue?</string>
    <string name="account_delete_success">Account has been deleted</string>
    <string name="account_email">Email</string>
    <string name="account_email_and_phone_number">Mobile Phone/Email</string>
    <string name="account_forget_pwd">Forget password?</string>
    <string name="account_manage">Account Manage</string>
    <string name="account_modify_email">Modify Email</string>
    <string name="account_modify_password">Modify Password</string>
    <string name="account_modify_phone">Modify Mobile Phone</string>
    <string name="account_modify_pwd_success">Password changed successful</string>
    <string name="account_new_password_six_to_sixteen">6–16 digit new password</string>
    <string name="account_no_app">This app is not installed</string>
    <string name="account_no_bind">Unbound</string>
    <string name="account_old_password">Old password</string>
    <string name="account_or">or</string>
    <string name="account_other_sign_in">Others Login</string>
    <string name="account_password">Password</string>
    <string name="account_password_six_to_sixteen">6–16 digit password</string>
    <string name="account_phone_number">Mobile Phone</string>
    <string name="account_request_auth_code">Request</string>
    <string name="account_sign_in">Login</string>
    <string name="account_sign_out">Logout</string>
    <string name="account_sign_out_prompt">Are you sure to logout?</string>
    <string name="account_sign_up">Register</string>
    <string name="account_use_directly">Use Without Account</string>
    <string name="action_add">Add</string>
    <string name="action_agree">Agree</string>
    <string name="action_choose_photo">Select</string>
    <string name="action_commit">Commit</string>
    <string name="action_completed">Completed</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_grant">Grant</string>
    <string name="action_help">Help</string>
    <string name="action_more">More</string>
    <string name="action_next">Next</string>
    <string name="action_open_in_browser">Open in the browser</string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select All</string>
    <string name="action_setting">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_skip">Skip</string>
    <string name="action_sort">Sort</string>
    <string name="action_start">Start</string>
    <string name="action_take_photo">Take Pictures</string>
    <string name="action_to_set">To Set</string>
    <string name="action_turn_on">Turn On</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">0022E2FD421973845ECEC0F1FFF60941379986264D5709D541B47BBFFF988CF016B52B592B2312455435989181EC32ADF71FD9762F469C015F3D4FE1161CA0CF4C7440A52BBC179B8514C51C9A021E70EB9AE50D8A9BFB0B3788649659241B07F5</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">003A53AC4C0E93E3D70737C8AD8B2AB04800EFF4F3A617F14834543F12F98EB040F6CED8AAC41ADB75AA6CFB0418D24BFA</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">EE10062B700BD39749878F1049E23E73</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00127CA251A5D4B7829DFD61EC8F6422AFD0FDD467F3517FF232B8FA08CB74FE4D</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">003FF47F42D09B0D3BF5FA0887D3F9A4B45CAE3ACDA8F72135DC2DD92867995C347DC9378B68A0F9B78AB9F8AAE5FC5B09</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">00F179C8BE2EFA9B74CA44B0C3CACCF7145ED35F7C811C7E57B087B82E2547F69D</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">00B385798F4CA959E76B52CDD368350E08D953583E72DDD6DF7359EBA47043009C496A4F2FE65447C99F2E46B138D53897199604A72E5F4076884F15FBC00F4836</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00C8C83DAB34E201879EBE066A8A32AA4B25246BC5CC0477D3EBF0ED1376445237</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00724B51BD1B4518D074B1B82F442E944B28B1D638A2DED47EF7C4D01C19FAC4024CDD79099DD2BA63775BE142193B4E72</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00AB5D9D3C5F7ACD1CC2500A2647F4FB67F6CF1367E046175B108090996A2D2B42514DF15A47274BD3135F0AC033466C0A</string>
    <string name="device_module">Device</string>
    <string name="ds_alarm">Alarms</string>
    <string name="ds_alipay">Alipay</string>
    <string name="ds_bhim">BHIM</string>
    <string name="ds_business_card">Business Card</string>
    <string name="ds_collection_code">Wallet</string>
    <string name="ds_collection_code_tips">Save the receive money QRCode to your watch to receive money anytime, anywhere</string>
    <string name="ds_contacts">Frequent Contacts</string>
    <string name="ds_dial_library">Dial library</string>
    <string name="ds_dial_local">Local dial</string>
    <string name="ds_drink_water">Drink Reminder</string>
    <string name="ds_facebook">Facebook</string>
    <string name="ds_find_device">Find Watch</string>
    <string name="ds_find_device_des">When you find the watch, it will vibrate</string>
    <string name="ds_game_push">Game Push</string>
    <string name="ds_gpay">GPay</string>
    <string name="ds_health_monitor">Automatic Health Monitor</string>
    <string name="ds_hour_style">Hour Style</string>
    <string name="ds_instagram">Instagram</string>
    <string name="ds_line">Line</string>
    <string name="ds_linkedin">LinkedIn</string>
    <string name="ds_notification">Push Notifications</string>
    <string name="ds_notification_email">Email</string>
    <string name="ds_nucleic_acid_code">Nucleic acid code</string>
    <string name="ds_page_config">Watch Display Settings</string>
    <string name="ds_payment_method">payment method</string>
    <string name="ds_paypal">PayPal</string>
    <string name="ds_paytm">Paytm</string>
    <string name="ds_phone">Phone</string>
    <string name="ds_phone_pe">PhonePe</string>
    <string name="ds_protection_reminder">Protection reminder</string>
    <string name="ds_qq">QQ</string>
    <string name="ds_reset">Restore Factory Settings</string>
    <string name="ds_screen_setting">Screen settings</string>
    <string name="ds_sedentary">Activity Reminder</string>
    <string name="ds_sedentary_des">1 hour of inactivity reminder</string>
    <string name="ds_shake_take_photos">Shake Photograph</string>
    <string name="ds_skype">Skype</string>
    <string name="ds_song_push">Song push</string>
    <string name="ds_sport_push">Sports push</string>
    <string name="ds_strengthen_test">Elevated Heart Rate Measurement</string>
    <string name="ds_turn_wrist_lighting">Raise to Wake</string>
    <string name="ds_twitter">Twitter</string>
    <string name="ds_version">Device Version</string>
    <string name="ds_vibration_intensity">Vibration strength</string>
    <string name="ds_wear_way">Wrist Preference</string>
    <string name="ds_wechat">WeChat</string>
    <string name="ds_whatsapp">WhatsApp</string>
    <string name="mine_module">Me</string>
    <string name="unit_length_imperial">Imperial(Feet, Miles)</string>
    <string name="unit_length_metric">Metric(Meters, Kilometers)</string>
    <string name="unit_module">Units</string>
    <string name="unit_set_length">Set units for distance</string>
    <string name="unit_set_temperature">Set units for temperature</string>
    <string name="unit_set_weight">Set units for weight</string>
    <string name="unit_temperature_centigrade">Celsius(℃)</string>
    <string name="unit_temperature_fahrenheit">Fahrenheit(℉)</string>
    <string name="unit_weight_imperial">Imperial(Pounds)</string>
    <string name="unit_weight_metric">Metric(Kilogram)</string>
    <string name="user_info_avatar">Avatar</string>
    <string name="user_info_birthday">Birthday</string>
    <string name="user_info_bp_private">Private Reference Mode</string>
    <string name="user_info_bp_tips">Please enter the blood pressure values measured by a conventional medical device, this value as a reference value of blood pressure measurement.</string>
    <string name="user_info_dbp">DBP</string>
    <string name="user_info_height">Height</string>
    <string name="user_info_id">ID</string>
    <string name="user_info_nickname">Nickname</string>
    <string name="user_info_sbp">SBP</string>
    <string name="user_info_sex">Sex</string>
    <string name="user_info_weight">Weight</string>
    <string name="weather_push">Weather reports</string>
</resources>